--- a/cdmlib-remote-webapp/src/main/webapp/VAADIN/themes/mytheme/styles.css
+++ b/cdmlib-remote-webapp/src/main/webapp/VAADIN/themes/mytheme/styles.css
@@ -48,6 +48,20 @@ box-shadow: 7px 13px 14px -1px rgba(0,0,0,0.85); */
 box-shadow: 19px 10px 16px -1px rgba(0,0,0,0.85);  */
 }
 
+.defaults{
+/* margin-left: auto;
+ margin-right:auto;
+ 
+ border-radius: 10px 10px 10px 10px;
+-moz-border-radius: 10px 10px 10px 10px;
+-webkit-border-radius: 10px 10px 10px 10px;
+border: 0px solid #000000;
+ 
+-webkit-box-shadow: 5px 5px 10px -3px rgba(0,0,0,0.85);
+-moz-box-shadow: 5px 5px 10px -3px rgba(0,0,0,0.85);
+box-shadow: 5px 5px 10px -3px rgba(0,0,0,0.85);	
+ */
+}
 
 .v-panel {
     background: url("icons/32/top-left.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
